--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,7 +97,7 @@ textarea,
 select {
   -webkit-appearance: none;
   appearance: none;
-  border-radius: 0.375rem;
+  border-radius: 0.375rem 0 0 0.375rem; /* Keep border radius only on the left side */
   padding: 0.75rem;
   width: 100%;
   border: 1px solid #e2e8f0;
